# docs/swagger.json
@@ -57,6 +57,11 @@
         },
         "/v1/api/product": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get all exists products.",
                 "consumes": [
                     "application/json"
@@ -78,6 +83,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "create product.",
                 "consumes": [
                     "application/json"
@@ -112,6 +122,11 @@
         },
         "/v1/api/product/{id}": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get one exists product.",
                 "consumes": [
                     "application/json"
@@ -142,6 +157,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "update one exists product.",
                 "consumes": [
                     "application/json"
@@ -181,6 +201,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "delete one exists product.",
                 "consumes": [
                     "application/json"
@@ -213,6 +238,11 @@
         },
         "/v1/api/transaction": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get all exists transaction.",
                 "consumes": [
                     "application/json"
@@ -234,6 +264,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "create transaction.",
                 "consumes": [
                     "application/json"
@@ -268,6 +303,11 @@
         },
         "/v1/api/transaction-detail/{id}": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get one exists transaction detail.",
                 "consumes": [
                     "application/json"
@@ -300,6 +340,11 @@
         },
         "/v1/api/transaction/{id}": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get one exists transaction.",
                 "consumes": [
                     "application/json"
@@ -330,6 +375,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "delete one exists transaction.",
                 "consumes": [
                     "application/json"
@@ -466,6 +516,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "JWT": {
+            "description": "Authorization For JWT",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
